--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Malki2001/github.com/MY_PORTFOLIO",
+  "homepage": "https://Malki2001.github.io/MY_PORTFOLIO",
   "name": "my_portfolio",
   "version": "0.1.0",
   "private": true,
@@ -48,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
